unpackaged/main/default/objects/Employee_Invoice_Allocation__c/Employee_Invoice_Allocation__c.object-meta.xml
<CustomObject>
    <label>Employee Invoice Allocation</label>
    <nameField>
        <displayFormat>EIA - {000000}</displayFormat>
        <label>Invoice allocation Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Invoice Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>