unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Costing_Dept__c.field-meta.xml
<CustomField>
    <fullName>Costing_Dept__c</fullName>
    <formula>Employee__r.PersonContact.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing Dept</label>
    <type>Text</type>
</CustomField>