unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Costing_Dept_Code__c.field-meta.xml
<CustomField>
    <fullName>Costing_Dept_Code__c</fullName>
    <formula>Employee__r.ETIN_Department_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing Dept Code</label>
    <type>Text</type>
</CustomField>