unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Costing_Location__c.field-meta.xml
<CustomField>
    <fullName>Costing_Location__c</fullName>
    <formula>Employee__r.ETIN_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing Location</label>
    <type>Text</type>
</CustomField>