unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Costing_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Costing_Location_Code__c</fullName>
    <formula>Employee__r.ETIN_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing Location Code</label>
    <type>Text</type>
</CustomField>