unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employee Invoice Allocations</relationshipLabel>
    <relationshipName>Employee_Invoice_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>