unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Invoice Allocations</relationshipLabel>
    <relationshipName>Employee_Invoice_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>