unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>ETIN_Insurance_Transactions__c</referenceTo>
    <relationshipLabel>Employee Invoice Allocations</relationshipLabel>
    <relationshipName>Employee_Invoice_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>