unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Membership_Code__c.field-meta.xml
<CustomField>
    <fullName>Membership_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>