unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Movement__c.field-meta.xml
<CustomField>
    <fullName>Movement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Movement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>