unpackaged/main/default/objects/Employee_Invoice_Allocation__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>